5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1643_2704.log
== SUBMITION (2019-04-15 15:19:27) 
-- CODE:
nota = float(input())

resposta = input()

acrescimo= (nota*10) /100

final = nota + acrescimo

if(resposta == 'A'):
	mensagem = round(final,2)
elif (resposta == 'B'):
	mensagem = round(nota,2)
print(mensagem)
-- EXECUTION TIME:
0.194701
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 13, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:41) 
-- CODE:
nota = float(input())

resposta = input()

acrescimo= (nota*10) /100

final = nota + acrescimo

if(resposta == 'S'):
	mensagem = round(final,2)
elif (resposta == 'N'):
	mensagem = round(nota,2)
print(mensagem)
-- EXECUTION TIME:
0.275347
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
